Move to JDK21/22 LanguageLevel21